# Dell-Capstone

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  DATA_SOURCES_AND_TOOLS.md  Dockerfile  README.md  nixpacks.toml  pyproject.toml  railpack.json  railway.toml  requirements-railway.txt  requirements.txt
artifacts/: .gitignore
configs/: world_spec.yaml
docs/: AZURE_FOUNDRY.md  DEPLOYMENT.md  EXPERIMENTATION_DEV_PLAN.md  LOVABLE_ARCHITECTURE_TAB.md  WORKSTREAM_AGENT_STRATEGY.md  agent_architecture.md  architecture.md  architecture_diagrams.md  azure_openai.md  deep_agents.md  implementation_plan_v1.md  langsmith_cli.md  langsmith_trace_plan.md  recommendation_agent.md  skills_catalog.md  validation_agent.md  world_spec.md
prompts/causal/: statistical_analysis.md  system.md
prompts/generation/: system.md
scripts/: benchmark_ablation.py  export_decision_packet.py  generate_agent_guide_pdf.py  install_langsmith_cli.sh  run_api_prod.sh  run_e2e_canonical.py  run_e2e_final.py  run_traced_dummy_flow.py  smoke_azure_openai.py
src/: __init__.py
src/agents/: __init__.py  (+2 more)
synthetic_env/: README.md  __init__.py  pipeline.py  traced_pipeline.py
tests/: build_benchmark_slice_a.py  conftest.py  test_agents_advanced.py  test_azure_llm_factory.py  test_causal_evaluation.py  test_coordinator_minimal.py  test_integration_benchmark.py  test_prompts_and_tools.py  test_ranking_inputs.py  test_recommendation.py  test_recommendation_agent.py  test_retrieval_and_causal.py  test_skill_contracts.py  test_smoke.py  test_validation_agent.py  test_workstream_be_contracts.py
(+104 files in other folders)
