[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptive-experimentation-agent"
version = "0.1.0"
description = "MVP starter for an adaptive experimentation recommendation agent"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Capstone Team" }]
dependencies = [
  "langgraph",
  "langchain",
  "fastapi",
  "uvicorn[standard]",
  "pydantic>=2.0",
  "pydantic-settings",
  "sqlalchemy",
  "asyncpg",
  "psycopg2-binary",
  "numpy",
  "pandas",
  "pyarrow",
  "scipy",
  "statsmodels",
  "scikit-learn",
  "pyyaml",
]

[project.optional-dependencies]
dev = ["jupyter", "matplotlib", "polars", "pytest"]
vector = ["pgvector"]
llm = ["langchain-openai"]
sandbox = ["daytona"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests", "synthetic_env/tests"]
addopts = "-q"
markers = [
  "slow: integration tests that generate synthetic benchmark data",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]
